Terminado el swagger y cambios en controllers de post
