# src/routes/post.routes.js
@@ -4,18 +4,15 @@ const validarIdPost = require('../middlewares/validarPostId');
 const validarPost = require('../middlewares/validarPost');
 const validarIdUser = require('../middlewares/validarUserId');
 const validarPostCache = require('../middlewares/validarPostCache');
+const validarPostParActualizar = require('../middlewares/validarPostAct')
+/* 
+const { validarTagId } = require('../middlewares/validarTagId');
+const validarTag = require('../middlewares/validarTag'); */
 
-//tags imports
-//const validarTagId = require('../middlewares/validarTagId');
-//const validarTagsArray = require('../middlewares/validarTagsPost');
-//const validarUpdatePost = require('../middlewares/validarPostAct');
-
-// VALIDAR TAG EXISTE ---> ARRAY DE TAGS NO SIRVE PARA AGREGAR UNO SOLO
 const validarTagExiste = require("../middlewares/validarExistenciaTags")
 const validarUserId = require("../middlewares/validarUserId")
-
-//
 const validarUnicoTagExistente = require("../middlewares/existenciaUnicoTag")
+
 const {
     obtenerPosts,
     obtenerPostPorId,
@@ -29,10 +26,13 @@ const {
 } = require("../controllers/post.controller");
 
 router.get("/", validarPostCache, obtenerPosts);
-router.get("/:id", validarIdPost, obtenerPostPorId);
-router.post("/", validarIdUser, validarPost, publicarPost);
-router.patch("/:id", validarIdPost, validarPost, actualizarPost); // validarUpdatePost
-router.delete("/:id", validarIdPost, eliminarPost);
+router.get("/:id", validarId, validarIdPost, obtenerPostPorId);
+router.post("/", validarPost,validarTagExiste,validarUserId,publicarPost);
+router.patch("/:id", validarId, validarIdPost, validarPostParActualizar, actualizarPost);
+router.delete("/:id", validarId, validarIdPost, eliminarPost);
+
+
+
 
 // TAG
 //router.patch("/:id/tags/:tagId", validarIdPost, validarTagId, agregarTagAPost)
